web-site/posts-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-api
  template:
    metadata:
      labels:
        app: posts-api
    spec:
      containers:
        - name: posts-api
          image: ghcr.io/week-book/posts-api
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
          imagePullPolicy: IfNotPresent
      volumes:
        - name: migrations
          configMap:
            name: posts-api-migrations
