web-site/posts-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-api
spec:
  type: ClusterIP
  selector:
    app: posts-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
